# MusicMonitor

./: CMakeLists.txt
src/: BackupManager.cpp  BackupManager.hpp  CMakeLists.txt  FoldersManager.cpp  FoldersManager.hpp  SettingsManager.cpp  SettingsManager.hpp  log.cpp  log.hpp  main.cpp
